# tui_chat

./: Cargo.toml
src/: connector.rs  controller_signals.rs  interpret.rs  lib.rs  session.rs  utils.rs
src/app/: mod.rs
src/app/ui/: intro.rs  mod.rs
src/ui/: intro.rs  main.rs  main_layout.rs  mod.rs
