[package]
name = "tui_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
cursive = "0.20"
redis = { version = "0.25", features = ["tokio-comp", "streams", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "widget"

[[bin]]
name = "start_session"
